--- a/Relaxr/starter_code/css/style.css
+++ b/Relaxr/starter_code/css/style.css
@@ -1,17 +1,18 @@
 #header{
 	background-image: url("../images/header_bg.jpg");
-	background-size: 50% 90%;
+	background-size: 100% 100%;
+	Background-color:#f0efef
 	background-repeat: no-repeat;
-	weight:600px;
-	height:600px
+        height:600px;
 	
 	
 }
 
 #header h2{
-	padding: 30px 80px;
-	font-size:30px;
-	font-weight: bold;
+	font-weight:bolder;
+	font-family: "Open Sans",Helvetica,sans-serif;
+	padding: 45px 20%;
+	font-size:40px;
 	color:white;
 	
 }
@@ -19,82 +20,166 @@
 
 
 #header h1{
-	padding:30px 300px 70px 250px;
-	font-size:25px;
-	font-weight:bold;
+	padding:45px 0;
+	font-size:40px;
+	font-family:"Open Sans",Helvetica,sans-serif;
+	font-weight:semibold;
 	color:white;
-}
+	text-align: center;
+	}
 
-
-#header a{
-	padding:0px 300px 0px 380px;
-}
 
 #header button{
-	background-color: yellow;
-    	border: none;
-	font-size:15px;
+	background-color: #f9e42e;
+    	border-radius:10px;
+	text-align:center;
+	font-size:25px;
     	font-color:black;
 	font-weight:bold;
-    	padding: 12px 42px;
+	width: 200px;
+    	padding: 15px 0px;
+	margin:0 45%;
+
+	
 }
 
 #benefits{
-	height:150px;
+	
+	height:400px;
 }
 
 #benefits h2{
-	padding:0px 80px;
-	font-size:25px;
+	font-family: "Open Sans",Helvetica,sans-serif;
+	padding:20px 20%;
+	font-size:40px;
 	font-weight: bold;
 	color:bule;
 }
 
 #benefits p{
+	font-weight: light;
+	font-size:25px;
+	padding:25px 20%;
+	width:800px;
+	font-family: "Open Sans",arial,sans-serif; 
+}
 
-	padding:10px 80px;
+#benefits ul{
+	font-weight: light;
+	font-family: "Open Sans",arial,sans-serif; 
+	font-size:20px;
+	padding:10px;
+	width:350px;
+	list-style-type:disc;
+	margin: 0 22%;
+	
 }
 
 #benefits ul li{
-	
-	list-style-type:disc;
-	margin: 0px 100px;
-}		
+	padding:5px;
+}
 
+		
 #testimonial{
 
 	background-image: url("../images/testimonial_bg.jpg");
-	background-size: 50% 100%;
+	background-size: 100% 100%;
 	background-repeat: no-repeat;
-	weight:300px;
-	height:300px
+	weight:250px;
+	height:300px;
 }
 
 #testimonial p{
 
-	padding:30px 300px;
-	font-size:20px;
+	font-style: italic;
+	font-weight:light;
+	padding:50px 50px;
+	font-size:30px;
 	color:white;
-	width: 300px;
-	text-align: justify;
+	text-align: center;
+	width: 500px;				
+	margin:0 auto;
+	
+}
+
+#testimonial span{
+	font-weight: bold;
+	font-family: "Open Sans",arial,sans-serif; 
+	font-size:35px;
+	color:white;
+	width:100px;
+	margin: 0 43%;
+	text-align: center;
 }
 
 #yellow{
-
+	background-size: 50% 100%;
 	background-color:yellow;
+	height:80px;
+	weight:300px;
+	
+}
+
+#yellow button{
+  
+        background-color: #033048;
+    	border:none;
+	font-size:15px;
+    	color:white;
+	font-weight:bold;
+	padding: 10px 18px;
+        text-align: center;
+	width:150px;
+	margin: 20px 46%;
+	text-align: center;
 }
 
 
-#black{
 
+
+
+#black{	
+
+	height:200px;
+	font-weight: bold;
+	font-family: "Open Sans",Helvetica,sans-serif; 
 	background-color:black;
 	
 	
 }
 
-
-#black li{
-	 display: inline;
+#black h2{
+	text-align: center;
+	color:yellow;
+	font-size:30px;
+	padding:30px 0;
+	margin:0 800px;
+	width: 300px;
 }
-		
+
+#black ul li{
+	
+	display: inline-block;
+	 width: 40px;
+	 text-align:center;
+	
+}
+
+#black ul li a{
+	
+	padding:20px;
+	margin: 0 880px;
+}
+
+#black p{
+	
+	padding:20px;
+	width:200px;
+	color:white;
+	font-size:13px;
+	margin: 0 44%;
+	text-align: center;
+}
+	
+
 
